overflow issue

--- a/public/css/less/layout.less
+++ b/public/css/less/layout.less
@@ -25,7 +25,6 @@ body {
 
 #content > ul > li > * {
 	position:absolute;
-	overflow:hidden;
 }
 
 #content > ul > li > div {
