--- a/public/css/less/tickets.less
+++ b/public/css/less/tickets.less
@@ -1,4 +1,5 @@
 #tickets-frame {
+	overflow:hidden;
 	.clearfix();
 
 	#map-background {
